syntax = "proto3";

package proto;

// Points are represented as latitude-longitude pairs and counts
message Point {
  string latitude = 1;
  string longitude = 2;
  uint32 count = 3;
}

// PointRequest
message PointRequest {}

// BoundedPointsRequest
message BoundedPointsRequest {
  Point lowerLeft  = 1;
  Point upperRight = 2;
}

// PointsResponse contains points for the client
message PointsResponse {
  repeated Point points = 1;
}

service MapService {

    // Streams all IPv6 data points
    rpc AllPoints(PointRequest) returns (PointsResponse) {}

    // Streams Points bounded by coordinates
    rpc BoundedPoints(BoundedPointsRequest) returns (PointsResponse) {}
}
